feat: 특정 위치 청소 기록 목록조회 API 구현